<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="start">

            <TextView
                android:id="@+id/subTotalAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                style="@style/TextViewStyle"
                android:textColor="@color/green"
                android:text="@string/sub_total_label"/>

            <EditText
                android:id="@+id/subTotalAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:layout_marginLeft="20dp"
                android:inputType="numberDecimal"
                style="@style/EditTextStyle"
                android:text="@string/subtotal_amount"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="start">

            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                style="@style/TextViewStyle"
                android:text="@string/discount_percent_label"/>

            <SeekBar
                android:id="@+id/percentSeekBar"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="10" />

            <TextView
                android:id="@+id/percentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="start">

            <TextView
                android:id="@+id/discountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                style="@style/TextViewStyle"
                android:text="@string/discount_amount_label"/>

            <TextView
                android:id="@+id/discountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/discount_amount"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:gravity="start">

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/total_amount_label"
                style="@style/TextViewStyle"
                android:textStyle="bold|italic"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_span="3"
                android:text="@string/total_amount"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</ScrollView>

